* Version 5.2.0 (unreleased)
 * PIV Support for compressed certificates.

* Version 5.1.1 (released 2023-04-27)
 ** Bugfix: PIV: string representation of SLOT caused infinite loop on Python <3.11.
 ** Bugfix: Fix errors in 'ykman config nfc' on YubiKeys without NFC capability.
 ** Bugfix: Fix error message shown when invalid modhex input length given for YubiOTP.

* Version 5.1.0 (released 2023-04-17)
 ** Add OpenPGP functionality to supported API.
 ** Add PIV key info command to CLI.
 ** PIV: Support signing prehashed data via API.
 ** Bugfix: Fix signing PIV certificates/CSRs with key that always requires PIN.
 ** Bugfix: Fix incorrect display name detection for certain keys over NFC.

* Version 5.0.1 (released 2023-01-17)
 ** Bugfix: Fix the interactive confirmation prompt for some CLI commands.
 ** Bugfix: OpenPGP Signature PIN policy values were swapped.
 ** Bugfix: FIDO: Handle discoverable credentials that are missing name or displayName.
 ** Add support for Python 3.11.
 ** Remove extra whitespace characters from CLI into command output.

* Version 5.0.0 (released 2022-10-19)
 ** Various cleanups and improvements to the API.
 ** Improvements to the handling of YubiKeys and connections.
 ** Command aliases for ykman 3.x (introduced in ykman 4.0) have now been dropped.
 ** Installers for ykman are now provided for Windows (amd64) and MacOS (universal2).
 ** Logging has been improved, and a new TRAFFIC level has been introduced.
 ** The codebase has been improved for scripting usage, either directly as a Python
    module, or via the new "ykman script" command.
    See doc/Scripting.adoc, doc/Library_Usage.adoc, and examples/ for more details.
 ** PIV: Add support for dotted-string OIDs when parsing RFC4514 strings.
 ** PIV: Drop support for signing certificates and CSRs with SHA-1.
 ** FIDO: Credential management commands have been improved to deal with ambiguity
    in certain cases.