@@ -1,6 +1,7 @@
 #  vim: set fileencoding=utf-8 :
 
-from yubikit.core import Tlv, bytes2int
+from ykman import __version__ as version
+from yubikit.core import Tlv, bytes2int, InvalidPinError
 from yubikit.core.otp import modhex_encode, modhex_decode
 from yubikit.management import FORM_FACTOR
 from ykman.util import is_pkcs12, is_pem, parse_private_key, parse_certificates
@@ -9,6 +10,12 @@ from ykman.otp import format_oath_code, generate_static_pw, time_challenge
 from .util import open_file
 
 import unittest
+
+
+def test_invalid_pin_exception_value_error():
+    # Fail if InvalidPinError still inherits ValueError in ykman 6.0
+    if int(version.split(".")[0]) != 5:
+        assert not isinstance(InvalidPinError(3), ValueError)
 
 
 class TestUtilityFunctions(unittest.TestCase):
